network-manager-applet (0.9.8.0-1) UNRELEASED; urgency=low

  * New upstream release.
  * Refresh 11-user-connections.patch.
  * Bump minimum required version of network-manager to (>= 0.9.8).
  * Install man pages provided by upstream instead of our own.

 -- Michael Biebl <biebl@debian.org>  Wed, 20 Feb 2013 23:53:32 +0100

network-manager-applet (0.9.7.997-1) experimental; urgency=low

  * New upstream release (0.9.8 beta2).
    - VPN connections can now be configured as "secondary" connections which
      are autostarted as soon as the underlying connection is active.
      (Closes: #589533)
  * Remove 05-8021x-passwords-user.patch, merged upstream.
  * Update 11-user-connections.patch for new code base.
  * Update 12-force-online.patch for the icon name changes.
  * Update symbols file for libnm-gtk0.
  * Bump minimum required version of network-manager to (>= 0.9.7.997).
  * Add Build-Depends on libgudev-1.0-dev and gobject-introspection.
  * Mark binary packages as linux-any.
  * Use a strict dependency between network-manager-gnome and libnm-gtk0 to
    avoid crashes due to missing schema files. (Closes: #699590)

 -- Michael Biebl <biebl@debian.org>  Sat, 09 Feb 2013 21:08:40 +0100

network-manager-applet (0.9.6.4-4) experimental; urgency=low

  * Merge bug fix from unstable branch.

 -- Michael Biebl <biebl@debian.org>  Wed, 30 Jan 2013 02:45:10 +0100

network-manager-applet (0.9.6.4-3) experimental; urgency=low

  * Merge changes from unstable branch.
  * Update debian/patches/11-user-connections.patch again.

 -- Michael Biebl <biebl@debian.org>  Thu, 17 Jan 2013 12:02:16 +0100

network-manager-applet (0.9.6.4-2) experimental; urgency=low

  * Merge changes from unstable branch.
  * Update debian/patches/11-user-connections.patch.

 -- Michael Biebl <biebl@debian.org>  Sun, 06 Jan 2013 10:53:34 +0100

network-manager-applet (0.9.6.4-1) experimental; urgency=low

  * New upstream release.
  * Use --list-missing to show uninstalled files.