@@ -1,3 +1,4 @@
 usr/lib/libnm-gtk.so
 usr/include/libnm-gtk/
 usr/lib/pkgconfig/libnm-gtk.pc
+usr/share/gir-1.0/NMGtk-1.0.gir
