@@ -13,6 +13,7 @@ override_dh_auto_configure:
 		--libexecdir=/usr/lib/NetworkManager \
 		--disable-more-warnings \
 		--enable-migration \
+		--enable-introspection \
 		--with-gtkver=3 \
 
 override_dh_install:
@@ -21,5 +22,9 @@ override_dh_install:
 
 override_dh_builddeb:
 	dh_builddeb -- -Zxz
+
+override_dh_shlibdeps:
+	dh_shlibdeps
+	dh_girepository
 
 override_dh_auto_test:
